feat(register): interest view done, with api request and fragments

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Flixhub"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".GettingStartedActivity"
@@ -22,8 +25,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".RegisterActivity" />
+        <activity android:name=".Register.RegisterActivity" />
         <activity android:name=".LoginActivity" />
+        <activity android:name=".Register.RegisterInterestsActivity" />
+        <activity android:name=".Register.RegisterProfileActivity" />
     </application>
 
 </manifest>
