feat(view): log_choice view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         </activity>
 
         <activity android:name=".GettingStartedActivity" />
+        <activity android:name=".LogChoiceActivity"/>
         <activity android:name=".Register.RegisterActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".Register.RegisterInterestsActivity" />
