--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".Register.RegisterProfileActivity" />
         <activity android:name=".Media.CategoryListActivity" />
         <activity android:name=".Home.HomeActivity" />
+        <activity android:name=".Media.MediaActivity"/>
     </application>
 
 </manifest>
