feat(history): history view by profile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity android:name=".Controller.Media.MediaActivity" />
         <activity android:name=".Controller.Player.PlayerActivity" />
         <activity android:name=".Controller.Profile.ProfileChooserActivity" />
+        <activity android:name=".Controller.Profile.ProfileHistoryActivity" />
     </application>
 
 </manifest>
