feat(privacy): add privacy policy (only in french)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,12 @@
         <activity
             android:name=".Controller.Media.SerieDetailsActivity"
             android:configChanges="orientation" />
+        <activity
+            android:name=".Controller.Media.SerieCategoryListActivity"
+            android:configChanges="orientation" />
+        <activity
+            android:name=".Controller.Profile.PrivacyPolicyActivity"
+            android:configChanges="orientation" />
 
         <service
             android:name=".Service.NotificationService"
