--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         tools:targetApi="31">
         <activity
             android:name=".Controller.MainActivity"
+            android:theme="@style/Theme.AppSplashScreen"
             android:configChanges="orientation"
             android:exported="true">
             <intent-filter>
@@ -68,6 +69,9 @@
             android:configChanges="orientation" />
         <activity
             android:name=".Controller.Profile.PrivacyPolicyActivity"
+            android:configChanges="orientation" />
+        <activity
+            android:name=".Controller.Profile.UserInformationActivity"
             android:configChanges="orientation" />
 
         <service
